shopping cart refactoring